--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,14 +1,27 @@
 {
-  "name": "ntfapp",
+  "name": "cnpm",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.3",
+    "connected-react-router": "^6.9.3",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-filter": "^1.3.3",
     "react-dom": "^18.2.0",
+    "react-intl": "^6.2.5",
+    "react-phone-input-2": "^2.15.1",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "react-toastify": "8.0.2",
+    "redux": "^4.2.0",
+    "sass": "^1.56.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
