--- a/frontend-version2/package.json
+++ b/frontend-version2/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.3",
+    "jquery": "^3.6.2",
     "js-cookie": "^3.0.1",
+    "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.7.0",
     "react-cookie": "^4.1.1",
