--- a/frontend-version2/package.json
+++ b/frontend-version2/package.json
@@ -19,10 +19,11 @@
     "react-toastify": "^9.1.1",
     "reactstrap": "^9.0.1",
     "remixicon": "^2.5.0",
+    "sass": "^1.56.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
